--- a/Cookie/Cookie/CKRecipeView.xib
+++ b/Cookie/Cookie/CKRecipeView.xib
@@ -2,13 +2,13 @@
 <archive type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="8.00">
 	<data>
 		<int key="IBDocument.SystemTarget">1060</int>
-		<string key="IBDocument.SystemVersion">11E53</string>
-		<string key="IBDocument.InterfaceBuilderVersion">2182</string>
-		<string key="IBDocument.AppKitVersion">1138.47</string>
-		<string key="IBDocument.HIToolboxVersion">569.00</string>
+		<string key="IBDocument.SystemVersion">10K549</string>
+		<string key="IBDocument.InterfaceBuilderVersion">1938</string>
+		<string key="IBDocument.AppKitVersion">1038.36</string>
+		<string key="IBDocument.HIToolboxVersion">461.00</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginVersions">
 			<string key="NS.key.0">com.apple.InterfaceBuilder.CocoaPlugin</string>
-			<string key="NS.object.0">2182</string>
+			<string key="NS.object.0">1938</string>
 		</object>
 		<array key="IBDocument.IntegratedClassDependencies">
 			<string>NSPopUpButtonCell</string>
@@ -50,7 +50,7 @@
 			</object>
 			<object class="NSCustomView" id="1005">
 				<reference key="NSNextResponder"/>
-				<int key="NSvFlags">268</int>
+				<int key="NSvFlags">293</int>
 				<array class="NSMutableArray" key="NSSubviews">
 					<object class="NSPopUpButton" id="873888021">
 						<reference key="NSNextResponder" ref="1005"/>
@@ -58,7 +58,7 @@
 						<string key="NSFrame">{{99, 336}, {46, 25}}</string>
 						<reference key="NSSuperview" ref="1005"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="229671765"/>
+						<reference key="NSNextKeyView" ref="953806113"/>
 						<bool key="NSEnabled">YES</bool>
 						<object class="NSPopUpButtonCell" key="NSCell" id="6076926">
 							<int key="NSCellFlags">-2080244160</int>
@@ -91,10 +91,11 @@
 					</object>
 					<object class="NSButton" id="865098734">
 						<reference key="NSNextResponder" ref="1005"/>
-						<int key="NSvFlags">268</int>
+						<int key="NSvFlags">289</int>
 						<string key="NSFrame">{{504, 12}, {82, 32}}</string>
 						<reference key="NSSuperview" ref="1005"/>
 						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView"/>
 						<bool key="NSEnabled">YES</bool>
 						<object class="NSButtonCell" key="NSCell" id="291571880">
 							<int key="NSCellFlags">67239424</int>
@@ -112,7 +113,7 @@
 					</object>
 					<object class="NSScrollView" id="628638031">
 						<reference key="NSNextResponder" ref="1005"/>
-						<int key="NSvFlags">256</int>
+						<int key="NSvFlags">284</int>
 						<array class="NSMutableArray" key="NSSubviews">
 							<object class="NSClipView" id="545182991">
 								<reference key="NSNextResponder" ref="628638031"/>
@@ -121,10 +122,10 @@
 									<object class="NSTextView" id="39099317">
 										<reference key="NSNextResponder" ref="545182991"/>
 										<int key="NSvFlags">2322</int>
-										<string key="NSFrameSize">{192, 14}</string>
+										<string key="NSFrameSize">{456, 2}</string>
 										<reference key="NSSuperview" ref="545182991"/>
 										<reference key="NSWindow"/>
-										<reference key="NSNextKeyView" ref="687844787"/>
+										<reference key="NSNextKeyView" ref="405647598"/>
 										<object class="NSTextContainer" key="NSTextContainer" id="1012905626">
 											<object class="NSLayoutManager" key="NSLayoutManager">
 												<object class="NSTextStorage" key="NSTextStorage">
@@ -140,7 +141,7 @@
 												<nil key="NSDelegate"/>
 											</object>
 											<reference key="NSTextView" ref="39099317"/>
-											<double key="NSWidth">192</double>
+											<double key="NSWidth">456</double>
 											<int key="NSTCFlags">1</int>
 										</object>
 										<object class="NSTextViewSharedData" key="NSSharedData">
@@ -184,16 +185,14 @@
 												<integer value="1" key="NSUnderline"/>
 											</dictionary>
 											<nil key="NSDefaultParagraphStyle"/>
-											<nil key="NSTextFinder"/>
-											<int key="NSPreferredTextFinderStyle">1</int>
 										</object>
 										<int key="NSTVFlags">6</int>
-										<string key="NSMaxSize">{463, 10000000}</string>
+										<string key="NSMaxSize">{525, 1e+07}</string>
 										<string key="NSMinize">{191, 0}</string>
 										<nil key="NSDelegate"/>
 									</object>
 								</array>
-								<string key="NSFrame">{{1, 1}, {206, 238}}</string>
+								<string key="NSFrame">{{1, 1}, {469, 110}}</string>
 								<reference key="NSSuperview" ref="628638031"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="39099317"/>
@@ -246,18 +245,18 @@
 								<double key="NSPercent">0.94565218687057495</double>
 							</object>
 						</array>
-						<string key="NSFrame">{{20, 20}, {208, 240}}</string>
+						<string key="NSFrame">{{20, 151}, {471, 112}}</string>
 						<reference key="NSSuperview" ref="1005"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="545182991"/>
-						<int key="NSsFlags">133122</int>
+						<reference key="NSNextKeyView" ref="687844787"/>
+						<int key="NSsFlags">2</int>
 						<reference key="NSVScroller" ref="405647598"/>
 						<reference key="NSHScroller" ref="687844787"/>
 						<reference key="NSContentView" ref="545182991"/>
 					</object>
 					<object class="NSScrollView" id="525350092">
 						<reference key="NSNextResponder" ref="1005"/>
-						<int key="NSvFlags">268</int>
+						<int key="NSvFlags">309</int>
 						<array class="NSMutableArray" key="NSSubviews">
 							<object class="NSClipView" id="204067306">
 								<reference key="NSNextResponder" ref="525350092"/>
@@ -266,24 +265,26 @@
 									<object class="NSTableView" id="269764288">
 										<reference key="NSNextResponder" ref="204067306"/>
 										<int key="NSvFlags">256</int>
-										<string key="NSFrameSize">{208, 183}</string>
+										<string key="NSFrameSize">{392, 94}</string>
 										<reference key="NSSuperview" ref="204067306"/>
 										<reference key="NSWindow"/>
-										<reference key="NSNextKeyView" ref="830533791"/>
+										<reference key="NSNextKeyView" ref="957131987"/>
 										<bool key="NSEnabled">YES</bool>
 										<object class="NSTableHeaderView" key="NSHeaderView" id="412121074">
 											<reference key="NSNextResponder" ref="830533791"/>
 											<int key="NSvFlags">256</int>
-											<string key="NSFrameSize">{208, 17}</string>
+											<string key="NSFrameSize">{392, 17}</string>
 											<reference key="NSSuperview" ref="830533791"/>
 											<reference key="NSWindow"/>
-											<reference key="NSNextKeyView" ref="204067306"/>
+											<reference key="NSNextKeyView" ref="712830823"/>
 											<reference key="NSTableView" ref="269764288"/>
 										</object>
-										<object class="_NSCornerView" key="NSCornerView">
-											<nil key="NSNextResponder"/>
+										<object class="_NSCornerView" key="NSCornerView" id="712830823">
+											<reference key="NSNextResponder" ref="525350092"/>
 											<int key="NSvFlags">-2147483392</int>
 											<string key="NSFrame">{{224, 0}, {16, 17}}</string>
+											<reference key="NSSuperview" ref="525350092"/>
+											<reference key="NSWindow"/>
 											<reference key="NSNextKeyView" ref="204067306"/>
 										</object>
 										<array class="NSMutableArray" key="NSTableColumns">
@@ -338,7 +339,7 @@
 											</object>
 											<object class="NSTableColumn" id="953194628">
 												<string key="NSIdentifier">measure</string>
-												<double key="NSWidth">137</double>
+												<double key="NSWidth">321</double>
 												<double key="NSMinWidth">40</double>
 												<double key="NSMaxWidth">1000</double>
 												<object class="NSTableHeaderCell" key="NSHeaderCell">
@@ -388,10 +389,9 @@
 										<int key="NSDraggingSourceMaskForNonLocal">0</int>
 										<bool key="NSAllowsTypeSelect">YES</bool>
 										<int key="NSTableViewDraggingDestinationStyle">0</int>
-										<int key="NSTableViewGroupRowStyle">1</int>
 									</object>
 								</array>
-								<string key="NSFrame">{{0, 17}, {208, 183}}</string>
+								<string key="NSFrame">{{0, 17}, {392, 94}}</string>
 								<reference key="NSSuperview" ref="525350092"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="269764288"/>
@@ -429,7 +429,7 @@
 								<array class="NSMutableArray" key="NSSubviews">
 									<reference ref="412121074"/>
 								</array>
-								<string key="NSFrameSize">{208, 17}</string>
+								<string key="NSFrameSize">{392, 17}</string>
 								<reference key="NSSuperview" ref="525350092"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="412121074"/>
@@ -437,21 +437,23 @@
 								<reference key="NSBGColor" ref="583840319"/>
 								<int key="NScvFlags">4</int>
 							</object>
+							<reference ref="712830823"/>
 						</array>
-						<string key="NSFrame">{{247, 20}, {208, 200}}</string>
+						<string key="NSFrame">{{99, 7}, {392, 111}}</string>
 						<reference key="NSSuperview" ref="1005"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="204067306"/>
-						<int key="NSsFlags">133120</int>
+						<reference key="NSNextKeyView" ref="830533791"/>
+						<int key="NSsFlags">0</int>
 						<reference key="NSVScroller" ref="957131987"/>
 						<reference key="NSHScroller" ref="1022595325"/>
 						<reference key="NSContentView" ref="204067306"/>
 						<reference key="NSHeaderClipView" ref="830533791"/>
+						<reference key="NSCornerView" ref="712830823"/>
 						<bytes key="NSScrollAmts">QSAAAEEgAABBmAAAQZgAAA</bytes>
 					</object>
 					<object class="NSImageView" id="953806113">
 						<reference key="NSNextResponder" ref="1005"/>
-						<int key="NSvFlags">268</int>
+						<int key="NSvFlags">265</int>
 						<set class="NSMutableSet" key="NSDragTypes">
 							<string>Apple PDF pasteboard type</string>
 							<string>Apple PICT pasteboard type</string>
@@ -463,7 +465,7 @@
 						<string key="NSFrame">{{377, 277}, {206, 206}}</string>
 						<reference key="NSSuperview" ref="1005"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="628638031"/>
+						<reference key="NSNextKeyView" ref="229671765"/>
 						<bool key="NSEnabled">YES</bool>
 						<object class="NSImageCell" key="NSCell" id="860797584">
 							<int key="NSCellFlags">130560</int>
@@ -523,8 +525,8 @@
 					</object>
 					<object class="NSTextField" id="560035797">
 						<reference key="NSNextResponder" ref="1005"/>
-						<int key="NSvFlags">268</int>
-						<string key="NSFrame">{{313, 228}, {76, 17}}</string>
+						<int key="NSvFlags">292</int>
+						<string key="NSFrame">{{17, 101}, {76, 17}}</string>
 						<reference key="NSSuperview" ref="1005"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="525350092"/>
@@ -542,10 +544,10 @@
 					<object class="NSTextField" id="229671765">
 						<reference key="NSNextResponder" ref="1005"/>
 						<int key="NSvFlags">268</int>
-						<string key="NSFrame">{{85, 268}, {79, 17}}</string>
+						<string key="NSFrame">{{17, 271}, {79, 17}}</string>
 						<reference key="NSSuperview" ref="1005"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="953806113"/>
+						<reference key="NSNextKeyView" ref="628638031"/>
 						<bool key="NSEnabled">YES</bool>
 						<object class="NSTextFieldCell" key="NSCell" id="736160900">
 							<int key="NSCellFlags">67239424</int>
@@ -603,7 +605,7 @@
 					</object>
 					<object class="NSTextField" id="479196404">
 						<reference key="NSNextResponder" ref="1005"/>
-						<int key="NSvFlags">268</int>
+						<int key="NSvFlags">264</int>
 						<string key="NSFrame">{{17, 461}, {358, 19}}</string>
 						<reference key="NSSuperview" ref="1005"/>
 						<reference key="NSWindow"/>
@@ -804,17 +806,17 @@
 						<array class="NSMutableArray" key="children">
 							<reference ref="374938973"/>
 							<reference ref="865098734"/>
-							<reference ref="953806113"/>
 							<reference ref="479196404"/>
-							<reference ref="628638031"/>
-							<reference ref="525350092"/>
-							<reference ref="229671765"/>
-							<reference ref="560035797"/>
 							<reference ref="775359202"/>
 							<reference ref="599132116"/>
 							<reference ref="340342400"/>
 							<reference ref="425816663"/>
 							<reference ref="873888021"/>
+							<reference ref="525350092"/>
+							<reference ref="628638031"/>
+							<reference ref="229671765"/>
+							<reference ref="953806113"/>
+							<reference ref="560035797"/>
 						</array>
 						<reference key="parent" ref="0"/>
 					</object>
@@ -1113,16 +1115,11 @@
 					<string key="superclassName">NSViewController</string>
 					<dictionary class="NSMutableDictionary" key="actions">
 						<string key="editAction:">id</string>
-						<string key="guestNumberChanged:">id</string>
 						<string key="ratingChanged:">id</string>
 					</dictionary>
 					<dictionary class="NSMutableDictionary" key="actionInfosByName">
 						<object class="IBActionInfo" key="editAction:">
 							<string key="name">editAction:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-						<object class="IBActionInfo" key="guestNumberChanged:">
-							<string key="name">guestNumberChanged:</string>
 							<string key="candidateClassName">id</string>
 						</object>
 						<object class="IBActionInfo" key="ratingChanged:">
